updated level  init functionality

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
             <div id="bar"></div>
           </div>
         </div>
-        <div id="menu" class="window" style="display:none">
+        <div id="menu" class="window">
             <div id="menu-top">
-                <span id="menu-music-btn" class="btn player-btn"><i class="icon-music"></i></span>
-                <span id="menu-volume-btn" class="btn player-btn"><i class="icon-volume-up"></i></span>
                 <div id="menu-logo">
                     <i class="icon-pied-piper"></i>
                 </div>
@@ -61,42 +59,51 @@
             <div class="lvl-card" onclick="navigateFromTo('level','play')">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 1</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 2</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 3</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 4</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 5</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 6</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 7</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 8</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 9</span>
+            <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
           </div>
         </div>
-        <div id="play" class="window">
+        <div id="play" class="window" style="display:none">
           <div id="player-controls">
               <span id="profile-thumbnail" class="btn player-btn"></span>
               <span id="player-name" class="btn player-btn">Ehab</span>
