dynamically binding levels posters

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
           <div id="lvl-container">
             <div class="lvl-card" onclick="gui.changeLevel(0)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="img/poster.png" class="lvl-poster">
             <span class="lvl-name">Level 1</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
@@ -146,7 +146,7 @@
         </div>
         <div id="profile" class="window">
           <div class="menu-bar">
-            <button class="btn" onclick="navigateFromTo('profile','menu','table')">
+            <button class="btn" onclick="gui.navigate('profile','menu')">
             <i class="icon-home-1"></i>
             </button>
             <span>Profile</span>
