--- a/index.html
+++ b/index.html
@@ -179,44 +179,31 @@
         </div>
         <div id="usermod" class="window">
           <div class="menu-bar">
-            <button class="btn" onclick="navigateFromTo('profile','menu','table')">
-            <i class="icon-home-1"></i>
-            </button>
-            <span>Profile</span>
+            <i class="icon-user-circle"></i>
+            <span>Create Your Profile!</span>
+            <span class="btn player-btn" onclick="saveUserMod()" id="usermod-save">
+                Save <i class="icon-angle-circled-right"></i>
+            </span>
           </div>
           <div id="profile-container" class="profile">
-            <div id="profile-top">
-                <div id="profile-charachter">
-                    <div id="profile-avatar">
-                    </div>
-                    <div id="profile-details">
-                        <div class="details-section details-lable">Nickname</div>
-                        <div class="details-section details-input">
-                            <input type="text">
-                        </div>
-                        <div class="details-section details-lable">Gender</div>
-                        <div class="details-section details-input" id="gender-input">
-                            <div class="gender-control"><div class="gender-btn icon-male" id="gender-selected"></div></div>
-                            <div class="gender-control"><div class="gender-btn icon-female"></div></div>
-                        </div>
-                    </div>
-                </div>
-                <div id="profile-badges">
-                    <div id="badge-sec2" class="badge-section">
-                        <i class="icon-angellist"></i> High Score: 999
-                    </div>
-                    <div id="badge-sec1" class="badge-section">
-                        Badges <i class="icon-emo-beer"></i>
-                    </div>
-                    <div id="badge-sec3" class="badge-section">
-                        <div class="badge-icon"><img src="img/badges/100%25.png" alt=""></div>
-                        <div class="badge-icon"><img src="img/badges/2xspeed.png" alt=""></div>
-                        <div class="badge-icon"><img src="img/badges/bestscore.png" alt=""></div>
-                        <div class="badge-icon"><img src="img/badges/skiplevel.png" alt=""></div>
-                        <div class="badge-icon"><img src="img/badges/thug.png" alt=""></div>
-                    </div>
-                </div>
-            </div>
+               <div class="usermod-details">
+                   <div id="usermod-avatar"><img src="" alt=""></div>
+                   <div class="usermod-info">
+                       <div class="usermod-section">
+                           <div class="usermod-lable">Nickname</div>
+                           <div class="usermod-control">
+                               <input id="usermod-name" type="text" class="usermod-input">
+                           </div>
+                       </div>
+                       <div class="usermod-section">
+                           <div class="usermod-lable">Gender</div>
+                           <div class="usermod-control" id="usermod-gender" value="male">
+                               <div id="male" onclick="toggleGender('male')" class="usermod-gender"><i class="icon-male"></i></div>
+                               <div id="female" onclick="toggleGender('female')"><i class="icon-female"></i></div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
             <div id="profile-bottom">
                 <div id="paddle-slider" class="slider">
                   <span class="btn-nav right-nav" onclick="slider.Slide('paddle','right')"><i class="icon-right-open"></i></span>
@@ -296,5 +283,6 @@
       <script src="source/runloop.js"></script>
       <script src="source/slider.js"></script>
       <script src="source/gui.js"></script>
+      <script src="source/usermod.js"></script>
     </body>
 </html>
