--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
         </div>
         <div id="menu" class="window">
             <div id="menu-top">
+               <span id="menu-volume-btn" class="btn player-btn" onclick="gui.toggleMusic()"><i class="icon-music-1"></i></span>
                 <div id="menu-logo">
-                    <i class="icon-pied-piper"></i>
+                    <!-- <i class="icon-pied-piper"></i> -->
+                    <img src="img/logo.png" alt="">
                 </div>
             </div>
             <div id="menu-bottom">
                 <div class="menu-item">
-                    <div class="menu-control btn" onclick="navigateFromTo('menu','profile')">
+                    <div class="menu-control btn" onclick="gui.navigate('menu','profile')">
                         <div class="control-icon"><i class="icon-user"></i></div>
                         <div class="control-lable">Profile</div>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <div class="menu-control btn" onclick="navigateFromTo('menu','play')">
+                    <div class="menu-control btn" onclick="gui.navigate('menu','play')">
                         <div class="control-icon"><i class="icon-gamepad"></i></div>
                         <div class="control-lable">Play</div>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <div class="menu-control btn" onclick="navigateFromTo('menu','level')">
+                    <div class="menu-control btn" onclick="gui.navigate('menu','level')">
                         <div class="control-icon"><i class="icon-lock"></i></div>
                         <div class="control-lable">Levels</div>
                     </div>
@@ -50,7 +52,7 @@
         </div>
         <div id="level" class="window">
           <div class="menu-bar">
-            <button class="btn" onclick="navigateFromTo('level','menu','table')">
+            <button class="btn" onclick="gui.navigate('level','menu','table')">
             <i class="icon-home-1"></i>
             </button>
             <span>Levels</span>
@@ -150,6 +152,9 @@
             <i class="icon-home-1"></i>
             </button>
             <span>Profile</span>
+            <span class="btn player-btn" onclick="gui.navigate('profile','usermod')" id="usermod-save">
+                Edit <i class="icon-cog"></i>
+            </span>
           </div>
           <div id="profile-container" class="profile">
             <div id="profile-top">
@@ -253,7 +258,7 @@
         document.getElementById(sender).style.display='none';
         document.getElementById(id).style.display=display;
       }
-      function loading() {
+      /*function loading() {
         var elem = document.getElementById("bar");
         var width = 1;
         var id = setInterval(progress, 25);
@@ -266,8 +271,8 @@
             elem.style.width = width + '%';
           }
         }
-      }
-      //loading();
+      }*/
+      //loading();*/
       </script>
       <script src="source/soundManager.js"></script>
       <script src="source/session.js"></script>
