fixed level thumb

--- a/index.html
+++ b/index.html
@@ -62,47 +62,47 @@
           </div>
           <div id="lvl-container">
             <div class="lvl-card" onclick="gui.changeLevel(0)">
-            <img src="" alt="img/poster.png" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 1</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(1)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 2</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(2)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 3</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(3)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 4</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(4)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 5</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(5)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 6</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(6)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 7</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(7)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 8</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
             <div class="lvl-card" onclick="gui.changeLevel(8)">
-            <img src="img/poster.png" alt="" class="lvl-poster">
+            <img src="" alt="" class="lvl-poster">
             <span class="lvl-name">Level 9</span>
             <div class="lvl-lock"><i class="icon-lock"></i></div>
             </div>
